# solid-state-sensor

./: .gitignore  CMakeLists.txt  Makefile  prj.conf
dts/: fdo2.dtso
overlays/: stm32f4_disco.overlay
src/: main.c
